# data

./: .gitignore  Pipfile  README.md  benchmark.py  load.py  pyproject.toml  source.py
src/: iter.py  load.py
src/data/: iter.py  load.py
tests/: test_iter.py
