[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]
[tool.uv_build]
packages = [
    { include = "data", from = "src" }
    { include = "performance", from = "src" }
]